--- a/src/components/ui/Switch.module.pcss
+++ b/src/components/ui/Switch.module.pcss
@@ -1,5 +1,8 @@
 .wrapper {
   @apply inline-flex justify-start items-center cursor-pointer scale-[0.75] sm:scale-[0.8] md:scale-[0.9] lg:transform-none origin-top-left;
+  &.right {
+    @apply origin-top-right;
+  }
 }
 
 .background {
